# stagepi

./: .gitignore  GETTING_STARTED.md  README.md  license.txt
.github/: LINTING.md  copilot-instructions.md
.github/workflows/: backend-tests.yml
image-builder/04-install-stagepi/files/: stagepi-latest.deb
scripts/: build.sh  deploy.sh  quick-rebuild.sh  rebuild-docker.sh
src/: Dockerfile.dev  docker-compose.dev.yml
src/backend/: .coveragerc  .flake8  .isort.cfg  Dockerfile.dev  Makefile  TESTING.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  verify_nmos.py
src/backend/api/: __init__.py  network_routes.py  services_routes.py  sound_hw_routes.py  streams_routes.py  system_routes.py
src/backend/core/: network_manager.py  service_manager.py  sound_hw_manager.py  stream_manager.py  system_manager.py
src/backend/core/nmos/: api.py  connection.py  mdns.py  models.py  node.py  utils.py
src/backend/tests/: __init__.py  test_stream_manager_supervisor.py  test_streams_routes.py
src/frontend/: README.md  index.html  package-lock.json  package.json
src/frontend/src/: app.css  app.tsx  config.ts  index.css  types.ts
src/frontend/src/components/: BottomBar.css  BottomBar.tsx  MainContent.css  MainContent.tsx  SideBar.css  SideBar.tsx  TopBar.css  TopBar.tsx
src/frontend/src/components/ui/: ProgressBar.css  ProgressBar.tsx  ToggleSwitch.css  ToggleSwitch.tsx
src/frontend/src/components/views/: Aes67.css  Aes67.tsx  Airplay.css  Airplay.tsx  Bluetooth.css  Bluetooth.tsx  LedView.css  LedView.tsx  Wifi.css  (+5 more)
src/image-builder/: install_stagepi.sh  stagepi-build.sh
src/image-builder/04-install-stagepi/: 01-run.sh
src/stagepi-package/DEBIAN/: control  postinst
stagepi-package/DEBIAN/: control  postinst
stagepi-package/usr/local/stagepi/: version
(+38 files in other folders)
