[project]
name = "stagepi-backend"
version = "1.0.0"
description = "StagePi Backend API - Open source stagebox firmware"
readme = "../../README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [
    {name = "Bama Box ltd."}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "python-multipart>=0.0.6",
    "libconf>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.2",
    "ruff>=0.1.9",
    "mypy>=1.7.1",
    "coverage[toml]>=7.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core"]

[tool.ruff]
# Ruff configuration - replaces black, flake8, and isort
line-length = 127
target-version = "py39"

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "env",
    ".venv",
    "dist",
    "build",
    "*.egg-info",
    "htmlcov",
    ".pytest_cache",
]

[tool.ruff.lint]
# Enable flake8 rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "C90", # mccabe complexity
    "UP",  # pyupgrade
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by formatter)
]

# Allow specific complexity
[tool.ruff.lint.mccabe]
max-complexity = 15

# Import sorting (isort replacement)
[tool.ruff.lint.isort]
known-first-party = ["api", "core"]

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
